Fix image map on safari (#5522)

--- a/src/Sulu/Bundle/AdminBundle/Resources/js/components/CircleSelection/circleSelection.scss
+++ b/src/Sulu/Bundle/AdminBundle/Resources/js/components/CircleSelection/circleSelection.scss
@@ -1,5 +1,5 @@
 .container {
-    display: inline-flex;
+    display: inline-block;
 }
 
 .selection {
